# stemwarrior-2021

./: README.rst  blog.html  deploy.sh  index.css  index.html  portals.html  pyproject.toml  style.css  styles.css  wsgi.py
.github/workflows/: main.yaml
data/: app.db
flask/: pyproject.toml
flask/src/: app.py
flaskr/: app.py  pyproject.toml
flaskr/static/: phishing.css
flaskr/static/css/: alert.css  disclaimers.css  index.css  mission.css  portals.css
flaskr/templates/: alert.html  disclaimers.html  facebookClone.htm  index.html  login.php  mission.html  phishing.html  portals.html
site/: blog.css  blog.html  disclaimers.css  disclaimers.html  facebookClone.htm  login.php  phishing.css  phishing.html  portals.css  portals.html
