[tool.poetry]
name = "ZADZ Backend"
version = "0.1.0"
description = ""
authors = ["zainthemaynnm <zainyusufazam@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
requests = "^2.26.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
