[tool.poetry]
name = "ZADZ Education"
version = "0.1.0"
description = "StemWarriorHacks 2021 submission."
authors = [
  "zainthemaynnn <zainyusufazam@gmail.com>",
  "Diovanni You don't need to know",
  "Laptop-Salad Wallis",
  "Zarik Khan"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
gunicorn = "^20.1.0"
Flask-Mail = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
